feat: 나의 스터디 조회 기능 구현
- StudyDao를 통해 스터디 목록을 한 번에 조회하는 로직 구현

#94