@@ -1,7 +1,7 @@
 package doore.study.application;
 
 import static doore.member.MemberFixture.아마란스;
-import static doore.study.StudyFixture.algorithmStudy;
+import static doore.study.CurriculumItemFixture.curriculumItem;
 import static doore.study.StudyFixture.createStudy;
 import static doore.study.exception.StudyExceptionType.NOT_FOUND_STUDY;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -15,15 +15,15 @@ import doore.member.domain.Member;
 import doore.member.domain.Participant;
 import doore.member.domain.repository.MemberRepository;
 import doore.member.domain.repository.ParticipantRepository;
-import doore.study.application.dto.response.StudyResponse;
 import doore.study.application.dto.response.personalStudyResponse.PersonalStudyDetailResponse;
-import doore.study.application.dto.response.totalStudyResponse.StudyDetailResponse;
+import doore.study.application.dto.response.totalStudyResponse.StudySimpleResponse;
 import doore.study.domain.Study;
+import doore.study.domain.repository.CurriculumItemRepository;
 import doore.study.domain.repository.StudyRepository;
 import doore.study.exception.StudyException;
 import doore.team.domain.Team;
 import doore.team.domain.TeamRepository;
-import java.util.Collections;
+import jakarta.persistence.EntityManager;
 import java.util.List;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
@@ -47,6 +47,10 @@ public class StudyQueryServiceTest extends IntegrationTest {
     TeamRepository teamRepository;
     @Autowired
     CropRepository cropRepository;
+    @Autowired
+    CurriculumItemRepository curriculumItemRepository;
+    @Autowired
+    EntityManager em;
 
     @Nested
     @DisplayName("스터디 Query 테스트")
@@ -56,7 +60,7 @@ public class StudyQueryServiceTest extends IntegrationTest {
         void findStudyById_정상적으로_스터디를_조회할_수_있다_성공() throws Exception {
             Study study = createStudy();
             studyRepository.save(study);
-            assertEquals(study.getId(), studyQueryService.findStudyById(study.getId()).studyResponse().getId());
+            assertEquals(study.getId(), studyQueryService.findStudyById(study.getId()).id());
         }
 
         @Test
@@ -68,7 +72,7 @@ public class StudyQueryServiceTest extends IntegrationTest {
             PersonalStudyDetailResponse personalStudyDetailResponse =
                     studyQueryService.getPersonalStudyDetail(study.getId(), memberId);
             assertAll(
-                    () -> assertEquals(study.getId(), personalStudyDetailResponse.studyResponse().getId()),
+                    () -> assertEquals(study.getId(), personalStudyDetailResponse.id()),
                     () -> assertEquals(memberId, personalStudyDetailResponse.participantId())
             );
         }
@@ -88,26 +92,33 @@ public class StudyQueryServiceTest extends IntegrationTest {
     void findMyStudies_내가_속한_스터디_목록을_조회할_수_있다_성공() {
         // given
         final Study study = createStudy();
-        final Study algorithmStudy = algorithmStudy();
-        studyRepository.save(study);
-        studyRepository.save(algorithmStudy);
+        final Study studyNotMine = createStudy();
+        final Study studyWithCurriculum = studyRepository.findById(
+                curriculumItemRepository.save(curriculumItem()).getStudy().getId()).get();
         final Team teamOfStudy = teamRepository.findById(study.getTeamId()).get();
+        final Team teamOfStudyWithCurriculums = teamRepository.findById(studyWithCurriculum.getTeamId()).get();
         final Crop cropOfStudy = cropRepository.findById(study.getCropId()).get();
+        final Crop cropOfStudyWithCurriculums = cropRepository.findById(studyWithCurriculum.getCropId()).get();
         final Member member = memberRepository.save(아마란스());
         participantRepository.save(Participant.builder()
                 .studyId(study.getId())
                 .member(member)
                 .build());
-        final List<StudyDetailResponse> expectedResponses = List.of(new StudyDetailResponse(
-                StudyResponse.of(study, teamOfStudy, cropOfStudy), Collections.emptyList()
-        ));
+        participantRepository.save(Participant.builder()
+                .studyId(studyWithCurriculum.getId())
+                .member(member)
+                .build());
+        final List<StudySimpleResponse> expectedResponses = List.of(
+                StudySimpleResponse.of(study, teamOfStudy, cropOfStudy),
+                StudySimpleResponse.of(studyWithCurriculum, teamOfStudyWithCurriculums, cropOfStudyWithCurriculums));
 
         // when
-        final List<StudyDetailResponse> actualResponses = studyQueryService.findMyStudies(member.getId());
+        final List<StudySimpleResponse> actualResponses = studyQueryService.findMyStudies(member.getId());
 
         // then
         Assertions.assertThat(actualResponses)
                 .usingRecursiveComparison()
+                .ignoringCollectionOrder()
                 .isEqualTo(expectedResponses);
     }
 
